# vita-cff

./: .gitignore
client/: .dockerignore  (+7 more)
server/: .dockerignore  .env.example  Dockerfile  conftest.py  pyproject.toml
server/apps/accounts/: admin.py  apps.py  managers.py  models.py
server/apps/ai/: admin.py  apps.py  matching.py  models.py  services.py
server/apps/attributes/: admin.py  apps.py  models.py  services.py
server/apps/audit/: admin.py  apps.py  models.py  services.py
server/apps/catalogues/: admin.py  apps.py  models.py  services.py  signals.py
server/apps/comments/: apps.py  broadcast.py  consumers.py  kiosk.py  mentions.py  middleware.py  models.py  notifications.py  routing.py  services.py
server/apps/customers/: models.py  services.py
server/apps/formulations/: admin.py  apps.py  constants.py  models.py  overview.py  services.py
server/apps/organizations/: admin.py  apps.py  models.py  modules.py  services.py
server/apps/product_validation/: admin.py  apps.py  models.py  services.py
server/apps/proposals/: __init__.py  admin.py  apps.py  models.py  render.py  services.py
server/apps/specifications/: admin.py  apps.py  constants.py  models.py  services.py
server/config/: asgi.py  avatars.py  exception_handler.py  settings.py  signatures.py  urls.py  wsgi.py
server/docker/: entrypoint.sh
server/requirements/: base.txt  dev.txt
server/scripts/: audit_raw_materials.py  fix_raw_material_dropdowns.py  import_packaging.py  import_raw_materials.py  run-fix-dropdowns.sh  run-import-local.sh  run-import-packaging.sh  run-import.sh
(+451 files in other folders)
